--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <!-- <a href="https://yatradham.org/noida-iskcon-guest-house.html" target="_parent">parent tlk</a>
         <a href="https://yatradham.org/noida-iskcon-guest-house.html" target="top">top tlk</a><hr>
          --> -->
-          <!-- <a href="#one">Click first</a>
+          <a href="#one">Click first</a>
           <a href="#two">Click two</a>
           <a href="#three">Click two</a>
           <a href="#four">Click two</a>
           <header>anurag</header>
           <section id="one">
         <h3>First </h3>
-        <p> This  adksl sdkjdf  dfskljd eijewij safkdjsd This  adksl sdkjdf  dfskljd eijewij safkdjsd 
+        <p> This  adksl sdkjdf  <b>dfskljd</b> eijewij <u>safkdjsd</u> This  <i>adksl</i> sdkjdf  dfskljd eijewij safkdjsd 
             This  adksl sdkjdf  dfskljd eijewij safkdjsd dfsjjdfksjhf fdjssdfhfd sfjdhjksfh sdfjhsdfj
             fsdjkhdfsj sfajfdhks fd This  adksl sdkjdf  dfskljd eijewij safkdjsd This  adksl sdkjdf  dfskljd eijewij safkdjsd 
             This  adksl sdkjdf  dfskljd eijewij safkdjsd dfsjjdfksjhf fdjssdfhfd sfjdhjksfh sdfjhsdfj
@@ -42,7 +42,7 @@
     </section>
     <section id="two">
         <h3>Second </h3>
-        <p> secThis  adksl sdkjdf  dfskljd eijewij safkdjsd This  adksl sdkjdf  dfskljd eijewij safkdjsd 
+        <p> secThis  adksl sdkjdf  <strong> bold s</strong> safkdjsd <ins>adksl</ins> <em>italic s</em>  dfskljd eijewij safkdjsd 
             This  adksl sdkjdf  dfskljd eijewij safkdjsd dfsjjdfksjhf fdjssdfhfd sfjdhjksfh sdfjhsdfj
             fsdjkhdfsj sfajfdhks fd secThis  adksl sdkjdf  dfskljd eijewij safkdjsd This  adksl sdkjdf  dfskljd eijewij safkdjsd 
             This  adksl sdkjdf  dfskljd eijewij safkdjsd dfsjjdfksjhf fdjssdfhfd sfjdhjksfh sdfjhsdfj
@@ -96,7 +96,7 @@
             This  adksl sdkjdf  dfskljd eijewij safkdjsd dfsjjdfksjhf fdjssdfhfd sfjdhjksfh sdfjhsdfj
             fsdjkhdfsj sfajfdhks fd secThis  adksl sdkjdf  dfskljd eijewij safkdjsd This  adksl sdkjdf  dfskljd eijewij safkdjsd 
             This  adksl sdkjdf  dfskljd eijewij safkdjsd dfsjjdfksjhf fdjssdfhfd sfjdhjksfh sdfjhsdfj
-            fsdjkhdfsj sfajfdhks fd  -->
+            fsdjkhdfsj sfajfdhks fd 
         </p>
     </section>
     <footer>
@@ -106,4 +106,5 @@
             itoslf
         </header>
         <h2> anu</h2>
+        <a href
     </footer>
